# telegram-bot-sample

./: README.md  cookiecutter.json
{{cookiecutter.directory_name}}/: pyproject.toml  setup.cfg
{{cookiecutter.directory_name}}/app/: aiogram_run.py  create_bot.py
{{cookiecutter.directory_name}}/app/conf/: settings.py
{{cookiecutter.directory_name}}/app/handlers/: start.py
{{cookiecutter.directory_name}}/compose/production/bot/: Dockerfile
