[tool.poetry]
name = "game"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.2"
loguru = "^0.7.2"
django-environ = "^0.11.2"
aiogram = "^3.10.0"
python-decouple = "^3.8"
apscheduler = "^3.10.4"
asyncpg = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"